[Version 1.2.5 Update]

Fixes:
- Removed some missed debug messages, again :')
- Optimized the refresh rate of room scans, so new room properties don't update faster than vanilla ones