@@ -1,5 +1,11 @@
 [Version 1.2.5 Update]
 
+Changes:
+- Villagers, as in settlers that live in villages not owned by any player, will not give a warning if you break something near them instead of immediately rushing you to make more player friendly
+- Stealing from villages will make the nearby villagers or settlers shout that they are angry to give you a warning sign
+- Normal, non-secure doors in settlements can now be interacted with by everyone in the game, no matter the relation to the settlement
+
+
 Fixes:
 - Removed some missed debug messages, again :')
 - Optimized the refresh rate of room scans, so new room properties don't update faster than vanilla ones
